  
  * Lower case characters are allowed in the code attribute
  * Underscore character is allowed at the beginning of the name and code
    attributes.
  * Minus (-) character is allowed in the code attribute.
  * Numbers are allowed at the beginning of both the name and code attributes.
  * CamelCase letters will be preserved in code attribute.

0.2.5.3
-------

* Fixed mayaEnv.Maya, it was trying to convert None to absolute path when
  checking for external paths.

* Added post_open() to houdiniEnv.Houdini.

* In version_updater the column label "Latest" is changed to
  "Latest Published" to make it clear.

* Fixed mayaEnv.Maya.export_as(), the workspace.mel is now properly created
  upon "export as".

* Fixed mayaEnv.Maya.save_as(), switching from a different workspace now
  will create the correct folder of the new workspace.

0.2.5.2
-------

* mayaEnv.Maya now creates all the folders defined in the
  pymel.core.workspace.fileRules dictionary.

* Creating a new Asset in version_creator now trigger the recreation of the
  project structure, this will allow any asset related folders to be created
  automatically. Change ``project_structure`` config value as desired.

* Added a new config value called ``maya_workspace_file_content`` to hold the
  workspace.mel content.

* version_creator UI now can work in read-only mode where it is only used for
  choosing existing versions.

0.2.5.1
-------

* Deletes are now cascaded. When a Project instance is deleted, all the related
  Sequence, Assets are also deleted, which also deletes the Shots and all the
  Version instances related to the deleted Assets and Shots. Also deleting a
  Sequence will delete the related Shots and thus the related Versions, and
  deleting an Asset will delete all the related Versions.

* In version_creator UI the notes of previous versions can now be changed by
  using the context menu on the previous_versions_tableWidget.

* project_properties dialog now warns the user for empty code field
